Fixed spacing between rocket and info on about page.

--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -28,6 +28,7 @@
   .rocket {
     margin-bottom: 0px;
     padding-top: 100px;
+    margin-right: 50px;
     @media (min-width: 800px) {
       padding-top: 0;
     }
